-> 1.5 Few Python tips

--- a/01-PYTHON/lecture-notes/0-IntroductionNotebook.ipynb
+++ b/01-PYTHON/lecture-notes/0-IntroductionNotebook.ipynb
@@ -266,9 +266,219 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "097b051f-ed0f-4036-9d7b-354d178f886e",
+   "metadata": {},
+   "source": [
+    "## How to use Python documentation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "e4bd1ab6-3c4b-447d-a996-8f14a6b73de9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function rand:\n",
+      "\n",
+      "rand(...) method of numpy.random.mtrand.RandomState instance\n",
+      "    rand(d0, d1, ..., dn)\n",
+      "\n",
+      "    Random values in a given shape.\n",
+      "\n",
+      "    .. note::\n",
+      "        This is a convenience function for users porting code from Matlab,\n",
+      "        and wraps `random_sample`. That function takes a\n",
+      "        tuple to specify the size of the output, which is consistent with\n",
+      "        other NumPy functions like `numpy.zeros` and `numpy.ones`.\n",
+      "\n",
+      "    Create an array of the given shape and populate it with\n",
+      "    random samples from a uniform distribution\n",
+      "    over ``[0, 1)``.\n",
+      "\n",
+      "    Parameters\n",
+      "    ----------\n",
+      "    d0, d1, ..., dn : int, optional\n",
+      "        The dimensions of the returned array, must be non-negative.\n",
+      "        If no argument is given a single Python float is returned.\n",
+      "\n",
+      "    Returns\n",
+      "    -------\n",
+      "    out : ndarray, shape ``(d0, d1, ..., dn)``\n",
+      "        Random values.\n",
+      "\n",
+      "    See Also\n",
+      "    --------\n",
+      "    random\n",
+      "\n",
+      "    Examples\n",
+      "    --------\n",
+      "    >>> np.random.rand(3,2)\n",
+      "    array([[ 0.14022471,  0.96360618],  #random\n",
+      "           [ 0.37601032,  0.25528411],  #random\n",
+      "           [ 0.49313049,  0.94909878]]) #random\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "help(np.random.rand)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "ceb248aa-d047-4f7d-bcd7-3aeab9914853",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function SumUpToN in module __main__:\n",
+      "\n",
+      "SumUpToN(n)\n",
+      "    This function returns the sum of the n first integers:\n",
+      "        sum = 1 + 2 + ... + n\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(SumUpToN)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d33a41c1-35b6-4f0d-bac2-2c6a298c42ee",
+   "metadata": {},
+   "source": [
+    "# Cells of text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5baac2b-c9e3-4460-aa0f-ca8e7034eeb7",
+   "metadata": {},
+   "source": [
+    "## The Markdown syntax"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd712578-2daf-407d-9232-db4fe9f684ee",
+   "metadata": {},
+   "source": [
+    "*italic text*  \n",
+    "**bold text**  \n",
+    "`line of code`  \n",
+    "[link](url)  \n",
+    "![name](image.jpg)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f420a87-23b4-449e-a871-c9a2667e3afe",
+   "metadata": {},
+   "source": [
+    "| col1 | col2|\n",
+    "|------|-----|\n",
+    "| y    | n   |\n",
+    "| y    | y   |\n",
+    "| n    | n   |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78761bc8-212c-4cd3-a24a-18aba7790f9b",
+   "metadata": {},
+   "source": [
+    "# Title\n",
+    "blablabla\n",
+    "## Subtitle\n",
+    "blablabla\n",
+    "### Subsubtitle\n",
+    "blablabla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "5f17381e-c1a4-4b09-bc01-acc2b50c20ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (620442419.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[109], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    ```python\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "```python\n",
+    "# Python code\n",
+    "list = [0, 1, 2, 3]\n",
+    "for i in list:\n",
+    "    print(i)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77090739-413f-4092-9d1a-5419c3b037aa",
+   "metadata": {},
+   "source": [
+    "> One day, one man said this would be a nice quotation.\n",
+    "> \n",
+    "> Romain M."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c762b82-6d41-4d29-a29b-377ca288b42d",
+   "metadata": {},
+   "source": [
+    "## Typical use of LaTeX"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acac1b04-634c-4e98-aef6-87fc63203935",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\sum_{i=0}^{n} i^2 \\neq \\int^{\\infty}_{0} \\varphi \\times f(\\theta) \\times \\sin \\left(\\frac{\\pi x}{x+1}\\right) \\, \\mathrm{d}x\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "998c43cb-9d1c-4a3d-8bcc-2285db8b9108",
+   "metadata": {},
+   "source": [
+    "## Typical use of HTML"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8db12503-deb5-4131-aaa9-cabd30e200b8",
+   "metadata": {},
+   "source": [
+    "<div style=\"color:white;background:blue;width:50%;padding:10px;font-size:18px;text-align:center\">This is a block with a HTML + CSS style!\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f52e6679-7357-46ef-bc56-61061ec2b785",
+   "id": "c538abfb-d4f6-4622-b556-f0057c103877",
    "metadata": {},
    "outputs": [],
    "source": []
