--- a/01-PYTHON/20240912_Python_Day04.ipynb
+++ b/01-PYTHON/20240912_Python_Day04.ipynb
@@ -389,12 +389,519 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "07c9c8e7-82c5-451e-a8f4-5acea01cf7a0",
+   "metadata": {},
+   "source": [
+    "## Pandas"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e1b997b8-5462-44d8-837d-15876179d7f7",
+   "execution_count": 149,
+   "id": "93b42e72-df07-4f5c-9d6e-e36b85d6bbd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>date</th>\n",
+       "      <th>height</th>\n",
+       "      <th>heightMax</th>\n",
+       "      <th>period</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>direction</th>\n",
+       "      <th>temperature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>01/01/2017 00:00</td>\n",
+       "      <td>-99.900</td>\n",
+       "      <td>-99.90</td>\n",
+       "      <td>-99.900</td>\n",
+       "      <td>-99.900</td>\n",
+       "      <td>-99.9</td>\n",
+       "      <td>-99.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>01/01/2017 00:30</td>\n",
+       "      <td>0.875</td>\n",
+       "      <td>1.39</td>\n",
+       "      <td>4.421</td>\n",
+       "      <td>4.506</td>\n",
+       "      <td>-99.9</td>\n",
+       "      <td>-99.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>01/01/2017 01:00</td>\n",
+       "      <td>0.763</td>\n",
+       "      <td>1.15</td>\n",
+       "      <td>4.520</td>\n",
+       "      <td>5.513</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>25.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>01/01/2017 01:30</td>\n",
+       "      <td>0.770</td>\n",
+       "      <td>1.41</td>\n",
+       "      <td>4.582</td>\n",
+       "      <td>5.647</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>25.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>01/01/2017 02:00</td>\n",
+       "      <td>0.747</td>\n",
+       "      <td>1.16</td>\n",
+       "      <td>4.515</td>\n",
+       "      <td>5.083</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>25.45</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index              date  height  heightMax  period  energy  direction  \\\n",
+       "0      1  01/01/2017 00:00 -99.900     -99.90 -99.900 -99.900      -99.9   \n",
+       "1      2  01/01/2017 00:30   0.875       1.39   4.421   4.506      -99.9   \n",
+       "2      3  01/01/2017 01:00   0.763       1.15   4.520   5.513       49.0   \n",
+       "3      4  01/01/2017 01:30   0.770       1.41   4.582   5.647       75.0   \n",
+       "4      5  01/01/2017 02:00   0.747       1.16   4.515   5.083       91.0   \n",
+       "\n",
+       "   temperature  \n",
+       "0       -99.90  \n",
+       "1       -99.90  \n",
+       "2        25.65  \n",
+       "3        25.50  \n",
+       "4        25.45  "
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('wave_data.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "69b86c5f-ebf0-4dac-9258-db83c4a83330",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df1 = df[['direction', 'energy']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "id": "3d0acf57-22a6-424d-b3c8-8a316f315ae3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>direction</th>\n",
+       "      <th>energy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td></td>\n",
+       "      <td>4.506</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>49.0</td>\n",
+       "      <td>5.513</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>75.0</td>\n",
+       "      <td>5.647</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>91.0</td>\n",
+       "      <td>5.083</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>68.0</td>\n",
+       "      <td>6.181</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>73.0</td>\n",
+       "      <td>4.705</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>63.0</td>\n",
+       "      <td>4.484</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>68.0</td>\n",
+       "      <td>5.042</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>66.0</td>\n",
+       "      <td>8.439</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>64.0</td>\n",
+       "      <td>4.584</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>56.0</td>\n",
+       "      <td>5.211</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>67.0</td>\n",
+       "      <td>5.813</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>81.0</td>\n",
+       "      <td>4.71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>90.0</td>\n",
+       "      <td>5.353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>67.0</td>\n",
+       "      <td>7.436</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>90.0</td>\n",
+       "      <td>6.001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>90.0</td>\n",
+       "      <td>6.414</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>88.0</td>\n",
+       "      <td>6.691</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>88.0</td>\n",
+       "      <td>6.804</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>122.0</td>\n",
+       "      <td>6.641</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>91.0</td>\n",
+       "      <td>5.958</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>92.0</td>\n",
+       "      <td>6.691</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   direction energy\n",
+       "0                  \n",
+       "1             4.506\n",
+       "2       49.0  5.513\n",
+       "3       75.0  5.647\n",
+       "4       91.0  5.083\n",
+       "5       68.0  6.181\n",
+       "6       73.0  4.705\n",
+       "7       63.0  4.484\n",
+       "8       68.0  5.042\n",
+       "9       66.0  8.439\n",
+       "10      64.0  4.584\n",
+       "11      56.0  5.211\n",
+       "12      67.0  5.813\n",
+       "13      81.0   4.71\n",
+       "14      90.0  5.353\n",
+       "15      67.0  7.436\n",
+       "16      90.0  6.001\n",
+       "17      90.0  6.414\n",
+       "18      88.0  6.691\n",
+       "19      88.0  6.804\n",
+       "20     122.0  6.641\n",
+       "21      91.0  5.958\n",
+       "22      92.0  6.691"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1[df1 > -99].fillna('')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "id": "87d4532c-38d4-4093-8ff2-61fd44418db2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "direction    21\n",
+       "energy       22\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1[df1 > -99].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "id": "59a36b28-ae43-4d9d-9b1f-6fab0769550b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "62.573913043478264"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.direction.std()\n",
+    "df.direction.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "id": "9a6ff067-9664-4a9f-923a-2d8f8c497276",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>direction</th>\n",
+       "      <th>energy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>23.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>62.573913</td>\n",
+       "      <td>1.217696</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>53.640489</td>\n",
+       "      <td>22.066111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-99.900000</td>\n",
+       "      <td>-99.900000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>4.876000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>73.000000</td>\n",
+       "      <td>5.647000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>90.000000</td>\n",
+       "      <td>6.527500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>122.000000</td>\n",
+       "      <td>8.439000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        direction     energy\n",
+       "count   23.000000  23.000000\n",
+       "mean    62.573913   1.217696\n",
+       "std     53.640489  22.066111\n",
+       "min    -99.900000 -99.900000\n",
+       "25%     65.000000   4.876000\n",
+       "50%     73.000000   5.647000\n",
+       "75%     90.000000   6.527500\n",
+       "max    122.000000   8.439000"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "id": "668dbf83-329d-4a16-86b7-a4aa5331bbd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0     -99.9\n",
+      "1     -99.9\n",
+      "2      49.0\n",
+      "3      75.0\n",
+      "4      91.0\n",
+      "5      68.0\n",
+      "6      73.0\n",
+      "7      63.0\n",
+      "8      68.0\n",
+      "9      66.0\n",
+      "10     64.0\n",
+      "11     56.0\n",
+      "12     67.0\n",
+      "13     81.0\n",
+      "14     90.0\n",
+      "15     67.0\n",
+      "16     90.0\n",
+      "17     90.0\n",
+      "18     88.0\n",
+      "19     88.0\n",
+      "20    122.0\n",
+      "21     91.0\n",
+      "22     92.0\n",
+      "Name: direction, dtype: float64\n",
+      "[-99.9 -99.9  49.   75.   91.   68.   73.   63.   68.   66.   64.   56.\n",
+      "  67.   81.   90.   67.   90.   90.   88.   88.  122.   91.   92. ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.direction)\n",
+    "print(df.direction.values)"
+   ]
   }
  ],
  "metadata": {
